--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tugas PR</title>
     <link rel="stylesheet" href="style.css">
-    <h5>V1.0</h5>
+    <center><h5>V1.0</h5>
     <h1>TUGAS KELAS X TKJ 3</h1>
     <h2>Created by : Niko & Syalom</h2>
     <br> 
@@ -18,6 +18,6 @@
         <li>Agama tabel</li>
         <li>PPSI yang persenan</li>
         <li>Tugas Inggris</li>
-    </ol>
+    </ol></center>
 </body>
 </html>
