--- a/index.html
+++ b/index.html
@@ -6,18 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tugas PR</title>
     <link rel="stylesheet" href="style.css">
-    <center><h5>V1.0</h5>
+    <h5>V1.0</h5>
     <h1>TUGAS KELAS X TKJ 3</h1>
     <h2>Created by : Niko & Syalom</h2>
-    <br> 
+    <h2>Detail tugas : Felix</h2>
+    <h4>Contact :</h4>
+    <a href=""><button>Niko</button></a>    
+    <br>
+    <a href=""><button>Syalom</button></a>
+    <br>
+    <a href=""><button>Felix</button></a>
+    <br>
+    <br>
 </head>
 <body>
-    <ol>
-        <li>Tugas SBK Hal 36</li>
-        <li>Bu Sondang Remedial</li>
-        <li>Agama tabel</li>
-        <li>PPSI yang persenan</li>
-        <li>Tugas Inggris</li>
-    </ol></center>
+    <div class="dropdown">
+        <button class="dropbtn">List Tugas</button>
+        <div class="dropdown-content">
+            <a href="Tugas index/tugas1.html" target="_blank">Remedial 1 MTK</a>
+            <a href="Tugas index/tugas2.html" target="_blank">Tugas pak suvento</a>
+            <a href="Tugas index/tugas3.html" target="_blank">Tugas 3</a>
+            <a href="Tugas index/tugas4.html" target="_blank">Tugas 4</a>
+            <a href="Tugas index/tugas5.html" target="_blank">Tugas 5</a>
+            <a href="Tugas index/tugas6.html" target="_blank">Tugas 6</a>
+            <a href="Tugas index/tugas7.html" target="_blank">Tugas 7</a>
+            <a href="Tugas index/tugas8.html" target="_blank">Tugas 8</a>
+            <a href="Tugas index/tugas9.html" target="_blank">Tugas 9</a>
+            <a href="Tugas index/tugas10.html" target="_blank">Tugas 10</a>
+        </div>
+    </div>
 </body>
 </html>
