--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
     <div class="dropdown">
         <button class="dropbtn">List Tugas</button>
         <div class="dropdown-content">
-            <a href="Tugas index/tugas1.html" target="_blank">Remedial 1 MTK</a>
-            <a href="Tugas index/tugas2.html" target="_blank">Tugas pak suvento</a>
-            <a href="Tugas index/tugas3.html" target="_blank">Tugas 3</a>
-            <a href="Tugas index/tugas4.html" target="_blank">Tugas 4</a>
-            <a href="Tugas index/tugas5.html" target="_blank">Tugas 5</a>
-            <a href="Tugas index/tugas6.html" target="_blank">Tugas 6</a>
-            <a href="Tugas index/tugas7.html" target="_blank">Tugas 7</a>
-            <a href="Tugas index/tugas8.html" target="_blank">Tugas 8</a>
-            <a href="Tugas index/tugas9.html" target="_blank">Tugas 9</a>
-            <a href="Tugas index/tugas10.html" target="_blank">Tugas 10</a>
+            <a href="Tugas/tugas1.html" target="_blank">Remedial 1 MTK</a>
+            <a href="Tugas/tugas2.html" target="_blank">Tugas pak suvento</a>
+            <a href="Tugas/tugas3.html" target="_blank">Tugas 3</a>
+            <a href="Tugas/tugas4.html" target="_blank">Tugas 4</a>
+            <a href="Tugas/tugas5.html" target="_blank">Tugas 5</a>
+            <a href="Tugas/tugas6.html" target="_blank">Tugas 6</a>
+            <a href="Tugas/tugas7.html" target="_blank">Tugas 7</a>
+            <a href="Tugas/tugas8.html" target="_blank">Tugas 8</a>
+            <a href="Tugas/tugas9.html" target="_blank">Tugas 9</a>
+            <a href="Tugas/tugas10.html" target="_blank">Tugas 10</a>
         </div>
     </div>
 </body>
