--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <h2>Created by : Niko & Syalom</h2>
     <h2>Detail tugas : Felix</h2>
     <h4>Contact :</h4>
-    <a href=""><button>Niko</button></a>    
+    <a href="https://wa.me/08988814421"><button>Niko</button></a>    
     <br>
-    <a href=""><button>Syalom</button></a>
+    <a href="https://wa.me/083151431158"><button>Syalom</button></a>
     <br>
-    <a href=""><button>Felix</button></a>
+    <a href="https://wa.me/089689560896"><button>Felix</button></a>
     <br>
     <br>
 </head>
