--- a/tugas1.html
+++ b/tugas1.html
@@ -6,9 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tugas 1</title>
     <link rel="stylesheet" href="style.css">
-    <h1>Tugas : </h1>
+    <h1>Tugas : Deadline Besok (Jumat, 19-Agustus-2022)</h1>
 </head>
 <body>
-    <p>Detail : </p>
+    <p>Detail : 
+- besok mengumpulkan remedial MTK
+- yang belum maju kelompok Bahasa Indonesia di persilahkan mempersiapkan diri
+- KHK PJOK yang belum menulis keterangan minggu lalu (12-Agustus-2022) silahkan ditulis
+    </p>
 </body>
 </html>
