--- a/tugas2.html
+++ b/tugas2.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tugas 2</title>
     <link rel="stylesheet" href="style.css">
-    <h1>Tugas : </h1>
+    <h1>Tugas : Menuliskan tentang sila sesuai pancasila</h1>
 </head>
 <body>
-    <p>Detail : </p>
+    <p>Detail : Menuliskan sesuai dengan persenan dibuku kalian (contoh : 70% berarti menuliskan 7 yg patut) tentang Sila yang sudah kamu lakukan dan yang bukan patut dilakukan </p>
+    <p>Durasi Tugas : 15/Agustus/2022 - 22/Agustus/2022 </p>
 </body>
 </html>
