--- a/tugas3.html
+++ b/tugas3.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tugas 3</title>
     <link rel="stylesheet" href="style.css">
-    <h1>Tugas : </h1>
+    <h1>Tugas : Tabel Agama</h1>
 </head>
 <body>
-    <p>Detail : </p>
+    <p>Detail : (Tentang kedewasaan yang membuat tabel, membuat 2 tabel buat di isi sendiri sama Orang tua) </p>
+    <p>Durasi tugas : 5/Agustus/2022 - 22/Agustus/2022w</p>
 </body>
 </html>
