--- a/tugas4.html
+++ b/tugas4.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tugas 4</title>
     <link rel="stylesheet" href="style.css">
-    <h1>Tugas : </h1>
+    <h1>Tugas : Pembinaan Karakter </h1>
 </head>
 <body>
-    <p>Detail : </p>
+    <p>Detail : (Tugas Pribadi yang 2 soal waktu pertemuan waktu itu) </p>
+    <p>Durasi Tugas : 15/Agustus/2022 - 22/Agustus/2022</p>
 </body>
 </html>
