--- a/tugas3.html
+++ b/tugas3.html
@@ -10,6 +10,6 @@
 </head>
 <body>
     <p>Detail : (Tentang kedewasaan yang membuat tabel, membuat 2 tabel buat di isi sendiri sama Orang tua) </p>
-    <p>Durasi tugas : 5/Agustus/2022 - 22/Agustus/2022</p>
+    <p>Durasi Tugas : 5/Agustus/2022 - 22/Agustus/2022</p>
 </body>
 </html>
