--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Tugas PR</title>
     <link rel="stylesheet" href="style.css">
     <h5>V1.0</h5>
-    <h1>TUGAS KELAS X TKJ 3</h1>
+    <h1>DAFTAR TUGAS X TKJ 3</h1>
     <h4>Created by : Niko & Syalom</h4>
     <h4>Detail tugas : Felix</h4>
     <h4>Contact :</h4>
