--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <a href="tugas2.html" target="_blank">PP dan SI</a>
             <a href="tugas3.html" target="_blank">Agama</a>
             <a href="tugas4.html" target="_blank">Pembinaan Karakter</a>
-            <a href="tugas5.html" target="_blank">-</a>
+            <a href="tugas5.html" target="_blank">Solo Learn</a>
             <a href="tugas6.html" target="_blank">-</a>
             <a href="tugas7.html" target="_blank">-</a>
             <a href="tugas8.html" target="_blank">-</a>
