--- a/tugas5.html
+++ b/tugas5.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tugas 5</title>
     <link rel="stylesheet" href="style.css">
-    <h1>Tugas : </h1>
+    <h1>Tugas : Solo Learn Web & C#</h1>
 </head>
 <body>
-    <p>Detail : </p>
-    <p>Durasi Tugas : </p>
+    <p>Detail : Kerjakan sololearn web dan C# untuk mendapatkan sertifikat</p>
+    <p>Durasi Tugas : Tidak Terbatas</p>
 </body>
 </html>
